--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "node-sass": "^5.0.0",
     "rxjs": "~6.6.0",
+    "svelte-preprocess": "^4.6.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
