--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
-    "node-sass": "^5.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.3.0",
     "rxjs": "~6.6.0",
     "svelte-preprocess": "^4.6.9",
     "tslib": "^2.0.0",
