--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,9 +10,9 @@ name: Deno
 
 on:
   push:
-    branches: [main]
+    branches: [CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew]
   pull_request:
-    branches: [main]
+    branches: [CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew]
 
 jobs:
   test:
