--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,38 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno and run tests across stable and nightly builds on Windows, Ubuntu and macOS.
-# For more information see: https://github.com/denolib/setup-deno
-
-name: Deno
+name: Node.js CI
 
 on:
   push:
-    branches: [CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew]
+    branches: [ CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew ]
   pull_request:
-    branches: [CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew]
-
+    branches: [ CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew ]
+name: Build Angular
 jobs:
-  test:
-    runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
-
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        deno: ["v1.x", "nightly"]
-        os: [macOS-latest, windows-latest, ubuntu-latest]
+        node-version: [12.x]
 
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
 
-      - name: Setup Deno
-        uses: denolib/setup-deno@c7d7968ad4a59c159a777f79adddad6872ee8d96
+      - name: Cache node modules
+        uses: actions/cache@v1
         with:
-          deno-version: ${{ matrix.deno }} # tests across multiple Deno versions
-
-      - name: Cache Dependencies
-        run: deno cache deps.ts
-
-      - name: Run Tests
-        run: deno test -A --unstable
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install and npm run build
+        run: |
+          npm i
+          npm run build:prod
+      - name: Push Build to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dist/angular-githubaction/*"
+          token: ${{ secrets.TOKEN }}
