Possible work around

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
+
 on:
   push:
-    branches: [ CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew ]
-
-  pull_request:
-    branches: [ CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew ]
+    tags:
+      - v*
 
 name: Build Angular
 jobs:
   build:
+    if: github.event.base_ref == 'refs/heads/CU-3cx2n7_Create-build-pipeline-to-deploy-onto-tagheadxyz_Andrew'
     runs-on: ubuntu-latest
     strategy:
       matrix:
