Solution to dist file path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Push Build to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist/angular-githubaction/*"
+          artifacts: "dist/*"
           token: ${{ secrets.TOKEN }}
