Added full artifact path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Push Build to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist/*"
+          artifacts: "/home/runner/work/taghead.xyz/taghead.xyz/dist/*"
           token: ${{ secrets.TOKEN }}
