Trying workflow suggestions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,7 @@ jobs:
       - name: npm install and npm run build
         run: |
           npm i
-          npm build
-          ls -la
-          ls dist/ -la
-          git status
+          npm run-script build
       - name: Push Build to Releases
         uses: ncipollo/release-action@v1
         with:
