Tar and zips build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,12 @@ jobs:
       - name: npm install and npm run build
         run: |
           npm i
-          npm run-script build
+          npm run-script build --prod
+          mkdir build
+          tar -czvf build/compiled.tar.gz dist/*
+          zip -r build/compiled.zip dist/*
       - name: Push Build to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist/*"
+          artifacts: "build/*"
           token: ${{ secrets.TOKEN }}
