--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: npm install and build
         run: |
           npm i
-          npm run-script build --prod
+          npm run-script build-prod
           mkdir build
           tar -czvf build/tagheadxyz-build-${GITHUB_REF/refs\/tags\//}.tar.gz dist/tagheadxyz/*
           zip -r build/tagheadxyz-build-${GITHUB_REF/refs\/tags\//}.zip dist/tagheadxyz/*
