--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "express": "^4.17.1",
     "primeicons": "^4.1.0",
     "rxjs": "~6.6.0",
     "svelte-preprocess": "^4.6.9",
