--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Angular Environment Variables
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
+# Supabase
+.supabase
