--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@supabase/supabase-js": "^1.18.1",
     "primeicons": "^4.1.0",
     "rxjs": "~6.6.0",
     "svelte-preprocess": "^4.6.9",
@@ -42,7 +43,7 @@
   "main": "index.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "supabase start && ng serve && supabase stop",
     "build": "ng build",
     "build-prod": "ng build --prod",
     "test": "ng test",
