Added docker support

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docker-start": "ng serve --open --host 0.0.0.0 --disable-host-check"
   },
   "repository": {
     "type": "git",
